--- a/clone-swiftui-tutorial/package.json
+++ b/clone-swiftui-tutorial/package.json
@@ -20,6 +20,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "seti-icons": "^0.0.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
