--- a/clone-swiftui-tutorial/package.json
+++ b/clone-swiftui-tutorial/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-hike-v1-starter",
+  "name": "clone-swiftui-tutorial",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "codehike": "^1.0.0-alpha.4",
+    "codehike": "^1.0.0-alpha.5",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18",
