--- a/clone-shopify-api-reference/package.json
+++ b/clone-shopify-api-reference/package.json
@@ -15,7 +15,8 @@
     "codehike": "^1.0.0-alpha.7",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
