--- a/clone-shopify-api-reference/package.json
+++ b/clone-shopify-api-reference/package.json
@@ -12,10 +12,15 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "codehike": "^1.0.0-alpha.7",
+    "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
