--- a/clone-shopify-api-reference/package.json
+++ b/clone-shopify-api-reference/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.1.0",
+    "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "codehike": "^1.0.0-alpha.7",
