--- a/with-nextra/package.json
+++ b/with-nextra/package.json
@@ -15,6 +15,9 @@
   },
   "devDependencies": {
     "@types/node": "20.12.7",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
   }
 }
