--- a/with-nextra/package.json
+++ b/with-nextra/package.json
@@ -6,10 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "codehike": "^1.0.0-alpha.14",
+    "codehike": "^1.0.0-alpha.16",
     "next": "^14.2.3",
-    "nextra": "^2.13.4",
-    "nextra-theme-docs": "^2.13.4",
+    "nextra": "3.0.0-alpha.24",
+    "nextra-theme-docs": "3.0.0-alpha.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
