--- a/with-remotion/package.json
+++ b/with-remotion/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "with-remotion",
-  "version": "1.0.0",
-  "description": "My Remotion video",
-  "scripts": {
-    "start": "remotion studio",
-    "build": "remotion render HelloWorld out/video.mp4",
-    "upgrade": "remotion upgrade",
-    "test": "eslint src --ext ts,tsx,js,jsx"
-  },
-  "repository": {},
-  "license": "UNLICENSED",
-  "dependencies": {
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@remotion/cli": "4.0.113",
-    "@remotion/zod-types": "4.0.113",
-    "codehike": "^1.0.0-alpha.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "remotion": "4.0.113",
-    "zod": "^3.21.4"
-  },
-  "devDependencies": {
-    "prettier": "^2.8.8"
-  },
-  "packageManager": "npm@9.6.7"
+	"name": "with-remotion",
+	"version": "1.0.0",
+	"description": "My Remotion video",
+	"scripts": {
+		"start": "remotion studio",
+		"build": "remotion render HelloWorld out/video.mp4",
+		"upgrade": "remotion upgrade",
+		"test": "eslint src --ext ts,tsx,js,jsx"
+	},
+	"repository": {},
+	"license": "UNLICENSED",
+	"dependencies": {
+		"@mdx-js/loader": "",
+		"@mdx-js/react": "",
+		"@remotion/cli": "4.0.150",
+		"@remotion/zod-types": "4.0.150",
+		"codehike": "^1.0.0-alpha.15",
+		"diff": "^5.2.0",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"remotion": "4.0.150",
+		"zod": "^3.21.4"
+	},
+	"devDependencies": {
+		"prettier": "^2.8.8"
+	},
+	"packageManager": "npm@9.6.7"
 }
