--- a/clone-swiftui-tutorial/package.json
+++ b/clone-swiftui-tutorial/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "^14.1.0",
+    "@next/mdx": "14.2.3",
     "@radix-ui/react-select": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "codehike": "^1.0.0-alpha.12",
+    "codehike": "^1.0.0-alpha.17",
     "lucide-react": "^0.323.0",
-    "next": "14.1.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "seti-icons": "^0.0.4",
@@ -33,7 +33,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "3.4.3",
     "typescript": "^5"
   }
 }
