Add static toggle

--- a/clone-swiftui-tutorial/package.json
+++ b/clone-swiftui-tutorial/package.json
@@ -13,9 +13,11 @@
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "14.2.3",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "codehike": "^1.0.0-alpha.17",
+    "codehike": "^1.0.0-alpha.18",
     "lucide-react": "^0.323.0",
     "next": "14.2.3",
     "react": "^18",
