--- a/with-remotion/package.json
+++ b/with-remotion/package.json
@@ -15,7 +15,7 @@
     "@remotion/cli": "4.0.167",
     "@remotion/google-fonts": "4.0.167",
     "@remotion/zod-types": "4.0.167",
-    "codehike": "^1.0.0-alpha.19",
+    "codehike": "^1.0.0-beta.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remotion": "4.0.167",
