--- a/with-docusaurus/package.json
+++ b/with-docusaurus/package.json
@@ -15,20 +15,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "3.4.0",
-    "@docusaurus/preset-classic": "3.4.0",
+    "@docusaurus/core": "0.0.0-6016",
+    "@docusaurus/preset-classic": "0.0.0-6016",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
-    "codehike": "^1.0.0-beta.0",
+    "codehike": "^1.0.0-beta.6",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.4.0",
-    "@docusaurus/tsconfig": "3.4.0",
-    "@docusaurus/types": "3.4.0",
+    "@docusaurus/module-type-aliases": "0.0.0-6016",
+    "@docusaurus/tsconfig": "0.0.0-6016",
+    "@docusaurus/types": "0.0.0-6016",
     "typescript": "~5.2.2"
   },
   "browserslist": {
