--- a/with-nextra/package.json
+++ b/with-nextra/package.json
@@ -6,10 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "codehike": "^1.0.0-alpha.16",
+    "codehike": "^1.0.0-beta.9",
     "next": "^14.2.3",
-    "nextra": "3.0.0-alpha.24",
-    "nextra-theme-docs": "3.0.0-alpha.24",
+    "nextra": "3.0.0-alpha.31",
+    "nextra-theme-docs": "3.0.0-alpha.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
