--- a/with-nextra/package.json
+++ b/with-nextra/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "codehike": "^1.0.0-beta.9",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@types/node": "20.12.7",
     "autoprefixer": "^10.4.19",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
