--- a/with-remotion/package.json
+++ b/with-remotion/package.json
@@ -15,7 +15,7 @@
     "@remotion/cli": "4.0.177",
     "@remotion/google-fonts": "4.0.177",
     "@remotion/zod-types": "4.0.177",
-    "codehike": "1.0.0-beta.9",
+    "codehike": "1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remotion": "4.0.177",
