--- a/with-fumadocs/package.json
+++ b/with-fumadocs/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "codehike": "1.0.0-beta.9",
+    "codehike": "1.0.0",
     "fumadocs-core": "12.2.5",
     "fumadocs-mdx": "8.2.33",
     "fumadocs-ui": "12.2.5",
