--- a/with-next-mdx-remote-rsc/package.json
+++ b/with-next-mdx-remote-rsc/package.json
@@ -10,7 +10,8 @@
     "next": "^14.2.7",
     "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "22.5.1",
