--- a/with-fumadocs/package.json
+++ b/with-fumadocs/package.json
@@ -5,26 +5,27 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "codehike": "1.0.0",
-    "fumadocs-core": "12.2.5",
-    "fumadocs-mdx": "8.2.33",
-    "fumadocs-ui": "12.2.5",
-    "next": "^14.2.4",
+    "codehike": "^1.0.4",
+    "fumadocs-core": "14.1.1",
+    "fumadocs-mdx": "11.1.1",
+    "fumadocs-ui": "14.1.1",
+    "next": "15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.13",
-    "@types/node": "20.14.9",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
+    "@types/node": "22.8.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
